// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UIToggle /> Styles - default 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "height": 24,
      "lineHeight": "normal",
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": 13,
        },
      },
    },
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "border": "1px solid var(--vscode-editorWidget-border)",
      "borderRadius": 0,
      "boxSizing": "initial",
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "&:hover": Object {
          "border": "1px solid var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "fontFamily": "var(--vscode-font-family)",
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UIToggle /> Styles - error message Error 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-errorBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderColor": "var(--vscode-inputValidation-errorBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-errorBorder)",
      "borderRight": "1px solid var(--vscode-inputValidation-errorBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "height": 24,
      "lineHeight": "normal",
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": 13,
        },
      },
    },
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "border": "1px solid var(--vscode-editorWidget-border)",
      "borderRadius": 0,
      "boxSizing": "initial",
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "&:hover": Object {
          "border": "1px solid var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "fontFamily": "var(--vscode-font-family)",
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UIToggle /> Styles - error message Info 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-infoBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-infoBorder)",
      "borderColor": "var(--vscode-inputValidation-infoBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-infoBorder)",
      "borderRight": "1px solid var(--vscode-inputValidation-infoBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "height": 24,
      "lineHeight": "normal",
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": 13,
        },
      },
    },
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "border": "1px solid var(--vscode-editorWidget-border)",
      "borderRadius": 0,
      "boxSizing": "initial",
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "&:hover": Object {
          "border": "1px solid var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "fontFamily": "var(--vscode-font-family)",
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;

exports[`<UIToggle /> Styles - error message Warning 1`] = `
Object {
  "errorMessage": Array [
    Object {
      "backgroundColor": "var(--vscode-inputValidation-warningBackground)",
      "borderBottom": "1px solid var(--vscode-inputValidation-warningBorder)",
      "borderColor": "var(--vscode-inputValidation-warningBorder)",
      "borderLeft": "1px solid var(--vscode-inputValidation-warningBorder)",
      "borderRight": "1px solid var(--vscode-inputValidation-warningBorder)",
      "color": "var(--vscode-input-foreground)",
      "margin": 0,
      "paddingBottom": 5,
      "paddingLeft": 8,
      "paddingTop": 4,
    },
  ],
  "field": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "boxSizing": "border-box",
      "color": "var(--vscode-input-foreground)",
      "fontSize": "13px",
      "fontWeight": "normal",
      "height": 24,
      "lineHeight": "normal",
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "::placeholder": Object {
          "color": "var(--vscode-input-placeholderForeground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": 13,
        },
      },
    },
    undefined,
    undefined,
    undefined,
  ],
  "fieldGroup": Array [
    Object {
      "backgroundColor": "var(--vscode-input-background)",
      "border": "1px solid var(--vscode-editorWidget-border)",
      "borderRadius": 0,
      "boxSizing": "initial",
      "height": 24,
      "maxHeight": 24,
      "minHeight": 24,
      "selectors": Object {
        "&:hover": Object {
          "border": "1px solid var(--vscode-focusBorder)",
        },
      },
    },
    undefined,
    undefined,
    undefined,
    undefined,
  ],
  "icon": Array [
    Object {
      "bottom": 2,
    },
  ],
  "root": Object {
    "fontFamily": "var(--vscode-font-family)",
    "height": "auto",
  },
  "subComponentStyles": Object {
    "label": Object {
      "root": Array [
        Object {
          "color": "var(--vscode-input-foreground)",
          "fontFamily": "var(--vscode-font-family)",
          "fontSize": "13px",
          "fontWeight": "bold",
          "marginTop": 25,
          "padding": "4px 0",
        },
        undefined,
        undefined,
      ],
    },
  },
  "suffix": Object {
    "backgroundColor": "var(--vscode-input-background)",
  },
}
`;
